# Translator-Bot

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.cpp  INSTALL_DEPENDENCIES.sh  QUICKSTART.md  README.md  bot.cpp  bot.py  build.sh  docker-compose.yml  docker-start.sh  requirements.txt
data/: bot.db-shm  bot.db-wal
include/: bot.hpp  config.hpp  database.hpp
include/modules/: custom_commands.hpp  leveling.hpp  logging.hpp  moderation.hpp  music.hpp  notifications.hpp  reaction_roles.hpp  translation.hpp  welcome.hpp
include/utils/: common.hpp  curl_helper.hpp  string_utils.hpp  thread_pool.hpp
src/: bot.cpp  config.cpp  database.cpp  main.cpp
src/modules/: custom_commands.cpp  leveling.cpp  logging.cpp  moderation.cpp  music.cpp  notifications.cpp  reaction_roles.cpp  translation.cpp  welcome.cpp
src/utils/: common.cpp  curl_helper.cpp  string_utils.cpp  thread_pool.cpp
